syntax = "proto3";

package bytebase.v1;

import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "google/api/client.proto";
import "google/api/field_behavior.proto";
import "google/api/resource.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/type/expr.proto";
import "v1/annotation.proto";
import "v1/common.proto";

option go_package = "github.com/bytebase/bytebase/backend/generated-go/v1";

// RiskService manages risk assessment rules for database changes.
service RiskService {
  // Lists all risk assessment rules.
  // Permissions required: bb.risks.list
  rpc ListRisks(ListRisksRequest) returns (ListRisksResponse) {
    option (google.api.http) = {get: "/v1/risks"};
    option (google.api.method_signature) = "";
    option (bytebase.v1.permission) = "bb.risks.list";
    option (bytebase.v1.auth_method) = IAM;
  }

  // Creates a new risk assessment rule.
  // Permissions required: bb.risks.create
  rpc CreateRisk(CreateRiskRequest) returns (Risk) {
    option (google.api.http) = {
      post: "/v1/risks"
      body: "risk"
    };
    option (google.api.method_signature) = "risk";
    option (bytebase.v1.permission) = "bb.risks.create";
    option (bytebase.v1.auth_method) = IAM;
    option (bytebase.v1.audit) = true;
  }

  // Retrieves a risk assessment rule by name.
  // Permissions required: bb.risks.list
  rpc GetRisk(GetRiskRequest) returns (Risk) {
    option (google.api.http) = {get: "/v1/{name=risks/*}"};
    option (google.api.method_signature) = "name";
    option (bytebase.v1.permission) = "bb.risks.list";
    option (bytebase.v1.auth_method) = IAM;
  }

  // Updates an existing risk assessment rule.
  // Permissions required: bb.risks.update
  // When allow_missing=true, also requires: bb.risks.create
  rpc UpdateRisk(UpdateRiskRequest) returns (Risk) {
    option (google.api.http) = {
      patch: "/v1/{risk.name=risks/*}"
      body: "risk"
    };
    option (google.api.method_signature) = "risk,update_mask";
    option (bytebase.v1.permission) = "bb.risks.update";
    option (bytebase.v1.allow_missing_requires) = "bb.risks.create";
    option (bytebase.v1.auth_method) = IAM;
    option (bytebase.v1.audit) = true;
  }

  // Deletes a risk assessment rule.
  // Permissions required: bb.risks.delete
  rpc DeleteRisk(DeleteRiskRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {delete: "/v1/{name=risks/*}"};
    option (bytebase.v1.permission) = "bb.risks.delete";
    option (bytebase.v1.auth_method) = IAM;
    option (bytebase.v1.audit) = true;
  }
}

message ListRisksRequest {}

message ListRisksResponse {
  repeated Risk risks = 1;
}

message CreateRiskRequest {
  // The risk to create.
  Risk risk = 1 [(google.api.field_behavior) = REQUIRED];
}

message GetRiskRequest {
  // The name of the risk to retrieve.
  // Format: risks/{risk}
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {type: "bytebase.com/Risk"}
  ];
}

message UpdateRiskRequest {
  // The risk to update.
  //
  // The risk's `name` field is used to identify the risk to update.
  // Format: risks/{risk}
  Risk risk = 1 [(google.api.field_behavior) = REQUIRED];

  // The list of fields to update.
  google.protobuf.FieldMask update_mask = 2 [(google.api.field_behavior) = REQUIRED];

  // If set to true, and the risk is not found, a new risk will be created.
  // In this situation, `update_mask` is ignored.
  bool allow_missing = 3;
}

message DeleteRiskRequest {
  // The name of the risk to delete.
  // Format: risks/{risk}
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {type: "bytebase.com/Risk"}
  ];
}

message Risk {
  option (google.api.resource) = {
    type: "bytebase.com/Risk"
    pattern: "risks/{risk}"
  };

  reserved 2;

  // Format: risks/{risk}
  string name = 1;

  // The source of the database change for risk assessment.
  enum Source {
    SOURCE_UNSPECIFIED = 0;
    // Data Definition Language statements (CREATE, ALTER, DROP, etc.).
    DDL = 1;
    // Data Manipulation Language statements (INSERT, UPDATE, DELETE, etc.).
    DML = 2;
    // Database creation operations.
    CREATE_DATABASE = 3;
    // Data export operations.
    DATA_EXPORT = 6;
    // Role access requests.
    REQUEST_ROLE = 7;
  }
  // The source of the operation being assessed for risk.
  Source source = 3;

  // The title of the risk rule.
  string title = 4 [(buf.validate.field).string.max_len = 200];
  // The risk level assigned when this rule matches.
  RiskLevel level = 5;
  // Whether the risk rule is active.
  bool active = 7;

  // The condition that is associated with the risk.
  // The syntax and semantics of CEL are documented at https://github.com/google/cel-spec
  //
  // All supported variables:
  // statement.affected_rows: affected row count in the DDL/DML, support "==", "!=", "<", "<=", ">", ">=" operations.
  // statement.table_rows: table row count number, support "==", "!=", "<", "<=", ">", ">=" operations.
  // resource.environment_id: the environment resource id, support "==", "!=", "in [xx]", "!(in [xx])" operations.
  // resource.project_id: the project resource id, support "==", "!=", "in [xx]", "!(in [xx])", "contains()", "matches()", "startsWith()", "endsWith()" operations.
  // resource.db_engine: the database engine type, support "==", "!=", "in [xx]", "!(in [xx])" operations. Check the Engine enum for the values.
  // statement.sql_type: the SQL type, support "==", "!=", "in [xx]", "!(in [xx])" operations.
  //  when the risk source is DDL, check https://github.com/bytebase/bytebase/blob/main/frontend/src/plugins/cel/types/values.ts#L70 for supported values.
  //  when the risk source is DML, check https://github.com/bytebase/bytebase/blob/main/frontend/src/plugins/cel/types/values.ts#L71 for supported values.
  // resource.database_name: the database name, support "==", "!=", "in [xx]", "!(in [xx])", "contains()", "matches()", "startsWith()", "endsWith()" operations.
  // resource.schema_name: the schema name, support "==", "!=", "in [xx]", "!(in [xx])", "contains()", "matches()", "startsWith()", "endsWith()" operations.
  // resource.table_name: the table name, support "==", "!=", "in [xx]", "!(in [xx])", "contains()", "matches()", "startsWith()", "endsWith()" operations.
  // statement.text: the SQL statement, support "contains()", "matches()", "startsWith()", "endsWith()" operations.
  // request.expiration_days: the role expiration days for the request, support "==", "!=", "<", "<=", ">", ">=" operations.
  // request.role: the request role full name, support "==", "!=", "in [xx]", "!(in [xx])", "contains()", "matches()", "startsWith()", "endsWith()" operations.
  //
  // When the risk source is DDL/DML, support following variables:
  // statement.affected_rows
  // statement.table_rows
  // resource.environment_id
  // resource.project_id
  // resource.db_engine
  // statement.sql_type
  // resource.database_name
  // resource.schema_name
  // resource.table_name
  // statement.text
  //
  // When the risk source is CREATE_DATABASE, support following variables:
  // resource.environment_id
  // resource.project_id
  // resource.db_engine
  // resource.database_name
  //
  // When the risk source is DATA_EXPORT, support following variables:
  // resource.environment_id
  // resource.project_id
  // resource.db_engine
  // resource.database_name
  // resource.schema_name
  // resource.table_name
  //
  // When the risk source is REQUEST_ROLE, support following variables:
  // resource.project_id
  // request.expiration_days
  // request.role
  google.type.Expr condition = 8;
}
